# typing_bot

./: .github-actions-guide.md  .gitignore  .pre-commit-config.yaml  .pre-commit-guide.md  DEVELOPMENT.md  EDITOR_IMPLEMENTATION.md  README.md  SHORT_COMMANDS.md  STRUCTURED_FORMAT.md  SYNTAX_HIGHLIGHTING.md  __init__.py  both_templates_test.struct  capture.py  clean_debug_test.struct  code_to_type_test.struct  code_to_type_test.txt  code_to_type_vim.struct  code_to_type_vim.txt  code_to_type_vscode.struct  command_sequence_test.struct  comprehensive_newline_test.struct  comprehensive_test.struct  debug_cursor_test.struct  editor_demo.py  editor_example.struct  editor_example_vim.struct  example.struct  example_mixed.struct  example_python.struct  example_shell.struct  example_vim.struct  example_vscode.struct  gemm_cupy_nvmath.py  if_name_indented_test.struct  if_name_test.struct  launch_editor.py  main.py  pyproject.toml  python_highlight_demo.struct  python_syntax_test.struct  (+17 more)
.github/workflows/: quality.yml  tests.yml
examples/: README.md  editor_example.sxt  editor_example_vim.sxt  example.sxt  example_mixed.sxt  example_python.sxt  example_shell.sxt  example_vim.sxt  example_vscode.sxt  python_highlight_demo.sxt  short_commands_clean_demo.sxt  short_commands_demo.sxt
scripts/: README.md  code_to_type_test.sxt  code_to_type_test.txt  code_to_type_vim.sxt  code_to_type_vim.txt  code_to_type_vscode.sxt  code_to_type_vscode.txt
tests/: README.md  both_templates_test.sxt  clean_debug_test.sxt  command_sequence_test.sxt  comprehensive_newline_test.sxt  comprehensive_test.sxt  conftest.py  debug_test.sxt  if_name_indented_test.sxt  if_name_test.sxt  python_syntax_test.sxt  shape_bug_test.sxt  test_advanced.py  test_basic_commands.py  test_highlighting.sxt  test_integration.py  test_newlines.sxt  test_parametrized.py  test_redraw.sxt  test_simple.sxt  test_templates.py  test_utils.py  try_except_test.sxt
typing_bot/: __init__.py  struct_editor.py  structured_capture.py  tyrec.py
